<resources>
    <string name="app_name">Domino Calculator</string>
    <string name="won_value">Won Value</string>
    <string name="down_value">Down Value</string>
    <string name="_1">+1</string>
    <string name="_2">+2</string>
    <string name="_3">+3</string>
    <string name="_4">+4</string>
    <string name="_5">+5</string>
    <string name="_6">+6</string>
    <string name="_7">+7</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="add">Add</string>
    <string name="down">Down</string>
    <string name="current_score">Current Score :</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="todo">TODO</string>
    <string name="end_round">end \nround</string>
    <string name="end_nround">end \nround</string>
    <string name="draw_domino">Draw Domino</string>
    <string name="play_draw_domino_1vs1">Play Draw Domino 1vs1</string>
    <string name="play_draw_domino_2vs2">Play Draw Domino 2vs2</string>
    <string name="play_fives_domino_3_players">Play Fives Domino 3 Players</string>
    <string name="all_fives_domino">All-Fives Domino</string>
    <string name="play_all_fives_domino_1vs1">Play All-Fives Domino 1vs1</string>
    <string name="play_all_fives_domino_2vs2">Play All-Fives Domino 2vs2</string>
    <string name="play_all_five_domino_3_players">Play All-Five Domino 3 Players</string>
    <string name="by">By:</string>
    <string name="omar_ayman">Omar Ayman</string>

    <string-array name="numbers">
        <item> Players win at:</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>
</resources>
