<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D1A9"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">


    <TextView
        android:id="@+id/draw_info"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:drawableEnd="@drawable/ic_baseline_info_24"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:onClick="ToPerfectActivity"
        android:text="@string/draw_domino"
        android:textColor="#000"
        android:textSize="30dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginStart="30dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/player1vs1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/draw_single"
            android:onClick="ToPerfectActivity"
            android:text="@string/play_draw_domino_1vs1"
            android:textSize="20dp"
            android:fontFamily="@font/acme"
            android:textColor="#000"
            android:textStyle="italic"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginStart="30dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/teams2"
            />

        <TextView
            android:id="@+id/draw_teams"
            android:onClick="ToPerfectActivity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/play_draw_domino_2vs2"
            android:textColor="#000"
            android:textSize="20dp"
            android:fontFamily="@font/acme"
            android:textStyle="italic"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginStart="30dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/players3"
            />

        <TextView
            android:id="@+id/draw_triple"
            android:onClick="ToPerfectActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_fives_domino_3_players"
            android:textSize="20dp"
            android:textColor="#000"
            android:textStyle="italic"
            android:fontFamily="@font/acme"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="8dp"
        android:background="@drawable/round_button" />

    <TextView
        android:id="@+id/five_info"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:drawableEnd="@drawable/ic_baseline_info_24"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:onClick="ToPerfectActivity"
        android:text="@string/all_fives_domino"
        android:textColor="#000"
        android:textSize="30dp"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/player1vs1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/five_single"
            android:onClick="ToPerfectActivity"
            android:text="@string/play_all_fives_domino_1vs1"
            android:textSize="20dp"
            android:fontFamily="@font/acme"
            android:textColor="#000"
            android:textStyle="italic"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_marginStart="30dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/teams2"
            />

        <TextView
            android:id="@+id/five_teams"
            android:onClick="ToPerfectActivity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/play_all_fives_domino_2vs2"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="italic"
            android:fontFamily="@font/acme"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_view_gold">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/players3"
            />

        <TextView
            android:id="@+id/five_triple"
            android:onClick="ToPerfectActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_all_five_domino_3_players"
            android:textSize="20dp"
            android:textColor="#000"
            android:textStyle="italic"
            android:fontFamily="@font/acme"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/by"
            android:textColor="#00039A"
            android:textSize="18dp"
            tools:ignore="InvalidId" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/omar_ayman"
            android:onClick="ToPerfectActivity"
            android:textColor="#00039A"
            android:textSize="18dp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>